# kgs

./: Cargo.toml
config/: .env
src/: main.rs
src/core/: config.rs  environment.rs  json.rs  key_generator.rs  mod.rs  recover.rs
src/core/middlewares/: with_env.rs
src/generator/: json.rs  mod.rs  route.rs
src/generator/handlers/: v1.rs
