[package]
name = "key_generator_service"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok.tw@outlook.com>"]

[dependencies]

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.futures]
version = "0.3.19"

[dependencies.warp]
version = "0.3.2"
features = ["tokio-rustls", "compression-gzip"]

[dependencies.serde]
version = "1.0.134"
features = ["derive"]

[dependencies.anyhow]
version = "1.0.52"

[dependencies.tracing]
version = "0.1.29"

[dependencies.tracing-subscriber]
version = "0.3.6"

[dependencies.dotenv]
version = "0.15.0"

